--- a/20210617.md
+++ b/20210617.md
@@ -17,12 +17,12 @@
     => 여기서 팩토리얼은 전에 익혀둔 식을 이용했다! 재귀함수가 아닌 그냥 함수로 구현하는 방법! 
       익혀 두길 잘한 것 같다
    
- - 오늘 **스택과 큐 문제를 풀어봤는데 덱(Deque)이라는 개념**도 꽤 나왔다. 한번 더 알아보고 그걸 쓴
+ - **스택과 큐 문제를 풀어봤는데 덱(Deque)이라는 개념**도 꽤 나왔다. 한번 더 알아보고 그걸 쓴
     다시 봐야 할 것 같다
    
- - 오늘은 **스택, 큐, DFS, BFS** 강의를 다시 듣고 복습하면서 정리했다... 나중에 더해야지😤😤
+ - **스택, 큐, DFS, BFS** 강의를 다시 듣고 복습하면서 정리했다... 나중에 더해야지😤😤
    
- - 오늘 새로 본 코드인데 아주 유용한 코드 였던!! 한 리스트에서 중복되는 수가 있을 때, 그 수가 몇번 반복되는 지 
+ - 새로 본 코드인데 아주 유용한 코드 였던!! 한 리스트에서 중복되는 수가 있을 때, 그 수가 몇번 반복되는 지 
    dictionary 형식으로 정리하고, 그 결과에서 값의 크기가 큰 순서대로 나열한뒤 그 값의 key값을 가져올 수 있는
    아주 간단하면서도 유용한 코드였다!!
 
