--- a/20210624.md
+++ b/20210624.md
@@ -26,7 +26,7 @@
   
   e. **input** : type 종류 => `text`, `email`, `password`, `url`, `number`, `file`, `radio`, `checkbox`
   
-  f. **label** : **`<label for="">라벨</label>`** =>  아래와 같이 label 붙여주기!
+  f. **label** : **`<label for="">라벨</label>`** =>  for에는 연결시키고자 하는 input의 아이디값!
   
   g. **textarea, select - option, button, table tag!** => 정말.. 많은 tag를 알게되었다!
   
