--- a/20210702.md
+++ b/20210702.md
@@ -16,6 +16,8 @@
 - 쿠키 생성하고 저장 하는 법 🍪
 - **`Promise`** 개념 꼭 다시 짚고 넘어가기 => **`async/await`** 도!
 - 토큰 인증.. **`Oauth2.0`** 과 **`JWT`** 각각의 원리 복습하고 차이도 알아보기
+- reducer 코드를 좀더 간단하게 해주는 **`redux-actions`** 와 불변성을 위한 **`immer`**
+- 리덕스에서 라우터의 history를 가져와서 쓰기 위한 **`connected-react-routner`**
 - 리덕스로 로그인 모듈 만들고 firebase이용해서 연결하는 것 까지.. 와.. 진짜 순서를 꼭 다시보고 익히자!
 
 : 와 정말 리액트는 방대하다. 이걸 뼈저리게 느끼고 있다.. 그리고 firebase 는 잘 익혀 놓으면 정말
