--- a/20210728.md
+++ b/20210728.md
@@ -4,11 +4,11 @@
 # 어제 내가 한것 
 
 ## 📌 내가 맡은 기능 구현 80% 완료!
-- [ ] 인증샷 상세페이지 + **`추가 / 수정 / 삭제`** 모두 마무리!
-- [ ] **`인증 확인`** 버튼 기능 로직 & 코드 구현 완료!
-- [ ] **`error`** 처리 최대한 상황에 맞는 alert 문구 설정
-- [ ] nav bar에서 항목 눌렸을 때 해당하는 element로 스크롤하기.. 는 왜 잘 안될까..?😂
-- [ ] 챌린지 진행 일수 별로 point 계산 하는 로직 간단하게 구현 
+- [x] 인증샷 상세페이지 + **`추가 / 수정 / 삭제`** 모두 마무리!
+- [x] **`인증 확인`** 버튼 기능 로직 & 코드 구현 완료!
+- [x] **`error`** 처리 최대한 상황에 맞는 alert 문구 설정
+- [x] nav bar에서 항목 눌렸을 때 해당하는 element로 스크롤하기.. 는 왜 잘 안될까..?😂
+- [x] 챌린지 진행 일수 별로 point 계산 하는 로직 간단하게 구현 
 
 ### 기능 구현 하면서 메모 하고 싶었던 것!
 
